welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: reassignment to val
	if (getCouleurSol=Color.green)
                         ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
		avance();
                      ^SlugTracking:12: error: type mismatch;
 found   : Unit
 required: Boolean
		avance();
                      ^