welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {

	if (getCouleurSol=Color.green)
	{
		avance();
	}
	else
	{
		recule();
		gauche();
		avance();
	}
}        
